  * Renamed the lsl.common.stations.LWAStation.getECEFTransform() function to getECITransform() to reflect what is really happening
  * Added a function to lsl.imaging.utils to make it easy to re-phase a data dictionary to a new pointing center
  * Added new functions to the LWAStation class to deal with direction and distance to other stations/points on the Earth

0.6.6
  * Fixed a problem with older NumPy installs not having a close() function
  * Fixed a bug in the splitTBN.py and splitDRX.py scripts when a 'count' is not provided

0.6.5
  * Fixed the time remaining computation in lsl.common.progress.ProgressBarPlus
  * Fixed a bug in imageIDI.py that caused the LST not to update on subsequent integrations
  * Added in a call to close() after numpy.load() is used
  * Updated the setup.py script to help deal with clang/OpenMP on OSX
  * Updated the lsl.common.metabundle module to deal with the new _metadata.txt file f
ormat
* Added a method to read in MCS MIB files in the GDBM format
  * Added new functions to lsl.common.metabundle to retrieve the ASP configuration from a new metadata tarball

0.6.4
  * Cleaned up the coherent part of the dedispersion module
  * Added a time estimating progress bar to lsl.common.progress
  * Fixed the data scaling in the SoftwareDP _processStreamFilter() function
  * Fixed the integration time stored in the FITS IDI files generated by correlateTBW.py
  * Added validation for the DR spectrometer channels/integration count/mode in an SDF
  * Fixed a couple of typos in the DR spectrometer reader that mixed the I-only and Q-only output modes
  * Fixed the 'fills' normalization in the DR spectrometer reader for the YX-only, YY-only, XX/YY, and XX/XY/YX/YY modes
  * Fixed the axis order in the SDFITS writer

0.6.3
  * Fixed a typo. in lsl.imaing.utils.pruneBaselineRange() function
  * Added normalization by the transform length to the lsl.reader._gofast module
  * Added back in the "import lsl; lsl.test()" fixture