@@ -12,12 +12,16 @@ coverage and time delays.  The functions in the module:
 	Removed function for dealing with meta-data (position, cable length, etc.) 
 	for individual stands since these are wrapped in the new :mod:`lsl.common.stations`
 	module.
+	
+.. versionchanged:: 0.7.0
+	Generalized the computeUVW() and computeUVTrack() functions.
 """
 
 import numpy
 
 from lsl.common.paths import data as dataPath
 from lsl.common.constants import *
+from lsl.common.stations import lwa1
 
 __version__ = '0.6'
 __revision__ = '$Rev$'
@@ -114,19 +118,23 @@ def antenna2baseline(ant1, ant2, antennas, antennas2=None, BaselineList=None, In
 			return -1
 
 
-def computeUVW(antennas, HA=0.0, dec=34.070, freq=49.0e6, IncludeAuto=False):
+def computeUVW(antennas, HA=0.0, dec=34.070, freq=49.0e6, site=lwa1, IncludeAuto=False):
 	"""
 	Compute the uvw converate of a baselines formed by a collection of 
 	stands.  The coverage is computed at a given HA (in hours) and 
-	declination (in degrees) for LWA-1.  The frequency provided (in Hz) can 
-	either as a scalar or as a numpy array.  If more than one frequency is 
-	given, the output is a three dimensional with dimensions of baselines, 
-	uvw, and frequencies.
+	declination (in degrees) for a given site.  The frequency provided 
+	(in Hz) can either as a scalar or as a numpy array.  If more than one 
+	frequency is given, the output is a three dimensional with dimensions 
+	of baselines, uvw, and frequencies.
 	
 	.. versionchanged:: 0.4.0
 		Switched over to passing in Antenna instances generated by the
 		:mod:`lsl.common.station` module instead of a list of stand ID
 		numbers.
+		
+	.. versionchanged:: 0.7.0
+		Added a keyword (site) to specify the station used for the 
+		observation.
 	"""
 
 	 # Try this so that freq can be either a scalar or a list 
@@ -134,7 +142,7 @@ def computeUVW(antennas, HA=0.0, dec=34.070, freq=49.0e6, IncludeAuto=False):
 		junk = len(freq) 
 	except TypeError: 
 		freq = numpy.array([freq])
-
+		
 	N = len(antennas)
 	baselines = getBaselines(antennas, IncludeAuto=IncludeAuto, Indicies=True)
 	Nbase = len(baselines)
@@ -145,8 +153,8 @@ def computeUVW(antennas, HA=0.0, dec=34.070, freq=49.0e6, IncludeAuto=False):
 	# Convert numbers to radians and, for HA, hours to degrees
 	HA2 = HA * 15.0 * deg2rad
 	dec2 = dec * deg2rad
-	lat2 = 34.070 * deg2rad
-
+	lat2 = site.lat
+	
 	# Coordinate transformation matrices
 	trans1 = numpy.matrix([[0, -numpy.sin(lat2), numpy.cos(lat2)],
 					   [1,  0,               0],
@@ -154,7 +162,7 @@ def computeUVW(antennas, HA=0.0, dec=34.070, freq=49.0e6, IncludeAuto=False):
 	trans2 = numpy.matrix([[ numpy.sin(HA2),                  numpy.cos(HA2),                 0],
 					   [-numpy.sin(dec2)*numpy.cos(HA2),  numpy.sin(dec2)*numpy.sin(HA2), numpy.cos(dec2)],
 					   [ numpy.cos(dec2)*numpy.cos(HA2), -numpy.cos(dec2)*numpy.sin(HA2), numpy.sin(dec2)]])
-
+					   
 	count = 0
 	for i,j in baselines:
 		# Go from a east, north, up coordinate system to a celestial equation, 
@@ -167,11 +175,11 @@ def computeUVW(antennas, HA=0.0, dec=34.070, freq=49.0e6, IncludeAuto=False):
 		for k in range(Nfreq):
 			uvw[count,:,k] = numpy.squeeze(temp) * freq[k] / numpy.array(c)
 		count = count + 1
-
+		
 	return uvw
 
 
-def computeUVTrack(antennas, dec=34.070, freq=49.0e6):
+def computeUVTrack(antennas, dec=34.070, freq=49.0e6, site=lwa1):
 	"""
 	Whereas computeUVW provides the uvw coverage at a particular time, 
 	computeUVTrack provides the complete uv plane track for a long 
@@ -184,22 +192,26 @@ def computeUVTrack(antennas, dec=34.070, freq=49.0e6):
 		Switched over to passing in Antenna instances generated by the
 		:mod:`lsl.common.station` module instead of a list of stand ID
 		numbers.
+		
+	.. versionchanged:: 0.7.0
+		Added a keyword (site) to specify the station used for the 
+		observation.
 	"""
-
+	
 	N = len(antennas)
 	Nbase = N*(N-1)/2
 	uvTrack = numpy.zeros((Nbase,2,512))
-
+	
 	# Phase center coordinates
 	# Convert numbers to radians and, for HA, hours to degrees
-	dec2 = dec * numpy.pi/180.0
-	lat2 = 34.070 * numpy.pi/180.0
-
+	dec2 = dec * deg2rad
+	lat2 = site.lat
+	
 	# Coordinate transformation matrices
 	trans1 = numpy.matrix([[0, -numpy.sin(lat2), numpy.cos(lat2)],
 					   [1,  0,               0],
 					   [0,  numpy.cos(lat2), numpy.sin(lat2)]])
-
+					   
 	count = 0
 	for i,j in getBaselines(antennas, Indicies=True):
 		# Go from a east, north, up coordinate system to a celestial equation, 
@@ -207,15 +219,15 @@ def computeUVTrack(antennas, dec=34.070, freq=49.0e6):
 		xyzPrime = antennas[i].stand - antennas[j].stand
 		xyz = trans1*numpy.matrix([[xyzPrime[0]],[xyzPrime[1]],[xyzPrime[2]]])
 		xyz = numpy.ravel(xyz)
-
+		
 		uRange = numpy.linspace(-numpy.sqrt(xyz[0]**2 + xyz[1]**2), numpy.sqrt(xyz[0]**2 + xyz[1]**2), num=256)
 		vRange1 = numpy.sqrt(xyz[0]**2 + xyz[1]**2 - uRange**2)*numpy.sin(dec2) + xyz[2]*numpy.cos(dec2)
 		vRange2 = -numpy.sqrt(xyz[0]**2 + xyz[1]**2 - uRange**2)*numpy.sin(dec2) + xyz[2]*numpy.cos(dec2)
-
+		
 		uvTrack[count,0,0:256] = uRange * freq / numpy.array(c)
 		uvTrack[count,1,0:256] = vRange1 * freq / numpy.array(c)
 		uvTrack[count,0,256:512] = uRange[::-1] * freq / numpy.array(c)
 		uvTrack[count,1,256:512] = vRange2[::-1] * freq / numpy.array(c)
 		count = count + 1
-			
+		
 	return uvTrack
